Heavy Load update

--- a/Content/Heavy/Heavy.htm
+++ b/Content/Heavy/Heavy.htm
@@ -4,6 +4,8 @@
     </head>
     <body>
         <h1>Heavy Load</h1>
+        <p>The European railway network is a critical component of the continent's logistics infrastructure, facilitating the movement of goods across countries efficiently. One aspect of rail transport that presents unique challenges is the transportation of Heavy Exceptional Consignments (HEC). These  shipments exceed the standard weights for rail transport. In the context of European Rail with a standard gauge of 1435 mm, a consignment is typically considered 'heavy' when it surpasses the maximum load capacity of 22.5 tonnes per axle.</p>
+        <p>Warning: In some networks or just on selected lines or sidings maximum load may be lower. Always inspect the permissible maximum load on the entire planned route. Poland is one of the countries where approximately 20% paths have maximum load capacity of 20,0 tonnes where additional load 0.5 t per wheelset in  class C requires an exceptional consignment permit.</p>
         <p>Rail vehicles vary in terms of load limits., </p>
         <p>Exceeded route's line category</p>
         <p>Excess to load limit within carrying capacity</p>
