--- a/Content/Out-of-Gauge/Loading Gauge.htm
+++ b/Content/Out-of-Gauge/Loading Gauge.htm
@@ -5,6 +5,60 @@
     </head>
     <body>
         <h1>Loading Gauge</h1>
-        <p>Loading gauge is a concept of predefined dimensions of height and width of a wagon with cargo. <br /> is defined by the dimensions of height and width above the rail top which must not be exceeded by a rail vehicle or its load, so not to foul line side fixtures or structured.</p>
+        <p>UIC Loading Guidelines contain eighteen tables with parameters of the loading gauges. These loading gauge profiles describe contours of static gauges permissible on specific infrastructure managers networks. There you will also find a list of around forty entities and the loading gauge which they apply.</p>
+        <p>Loading gauge is a concept of predefined dimensions of height and width of a wagon with cargo.  is defined by the dimensions of height and width above the rail top which must not be exceeded by a rail vehicle or its load, so not to foul the line’s side fixtures or structure.</p>
+        <p>The size of the permissible area encompassed by the loading gauge contour depends on the gauge calculation method. For exceptional transports static gauge calculation is easiest to carry out and therefore while filling out the application you declare the parameters necessary for this type of calculation.</p>
+        <p>Information on loading gauges and:</p>
+        <p>•	their static contours for most European countries you find in the UIC Loading Guidelines Volume 1</p>
+        <p>•	the access conditions referred to Exceptional Transports may be stated in the Network Statements or internal IM’s issued by infrastructure managers</p>
+        <p>Note: When you are responsible for transport through a number of IM networks you may need to check information on each network individually. In such case smallest loading gauge applies on the entire route.</p>
+        <p>Mostly know static gauges in continental Europe include:</p>
+        <table style="width: 100%;">
+            <col />
+            <col />
+            <tbody>
+                <tr>
+                    <td>Symbol</td>
+                    <td>Loading gauge description</td>
+                </tr>
+                <tr>
+                    <td>G1</td>
+                    <td>
+                        <p>	International loading gauge. This is the smallest of the available gauges with maximum height 4.28 m. This gauge is the oldest one and it Is used for routes with strict restrictions. This gauge is considered interoperable except for Great Britain.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>GA</td>
+                    <td>
+                        <p>	Often referred to as the 'general gauge,' it is used for international traffic in Europe. Maximum height 4.32 m.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>GB	</p>
+                    </td>
+                    <td>This gauge allows for larger dimensions than GA and is used for a limited number of routes. Maximum height 4.32</td>
+                </tr>
+                <tr>
+                    <td>
+                        <p>G2	</p>
+                    </td>
+                    <td>
+                        <p>This is larger than GB and is used for specific routes that can accommodate such dimensions. Maximum height 4.65m. Lit of IMs accepting this gauge.</p>
+                    </td>
+                </tr>
+                <tr>
+                    <td>GC</td>
+                    <td>
+                        <p>	This is larger than G2 and is the largest of all loading gauges. Currently it is used for specific routes that can accommodate such dimensions. In railway documentation this gauge is referred to as the target gauge. Maximum height 4.65 m. (static)</p>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <p>The only difference between the GA, GB, and two additional GB1 and GB2 gauge profiles is how much or how little the bevelling is.</p>
+        <p>Image.</p>
+        <p>Note: Some IMs defined on their networks kinematic loading gauge profiles for combined transport as for the specifically defined loads, in line with provisions of the UIC Leaflet 506</p>
+        <p>Warning: Countries like France, Norway and Italy use smaller gauges and therefore when working on applications to these countries. For other countries and loading gauge profiles while in doubt always consult UIC Loading Guidelines.</p>
+        <p>Specific rules on the loading gauge check and gauge restrictions necessary for filling the application purpose are laid out in UIC Loading Guidelines. In addition, observe national IM’s rules.</p>
     </body>
 </html>
