--- a/Content/Out-of-Gauge/Structure Gauge.htm
+++ b/Content/Out-of-Gauge/Structure Gauge.htm
@@ -4,6 +4,45 @@
     </head>
     <body>
         <h1>Structure Gauge</h1>
-        <p>In rail transport one of the most frequently asked questions is, as to what is the largest train (consisting of a vehicle, or a loaded wagon) that the considered railway network could accommodate? </p>
+        <p>In rail transport one of the most frequently asked questions is, as to what is the largest train (consisting of a vehicle, or a loaded wagon) that the considered railway network could accommodate? Network capability on accepting larger than standard trains derives from the gauging methods applied.</p>
+        <p>Infrastructure Gauging Methods</p>
+        <p>Three infrastructure gauging methods are currently applied in Europe:</p>
+        <p>•	defined gauging,</p>
+        <p>•	absolute gauging,</p>
+        <p>•	comparative gauging.</p>
+        <p>Europe has generally adopted  a standard UIC approach of defined gauging where infrastructure gauges are defined on the basis of the reference contour and application of associated calculation rules. These UIC gauging methods were originally defined in the 505 series of leaflets. These methods are now also described in the series of European Standard EN 15273.</p>
+        <p>Important! Comparing infrastructure gauges only by their profiles shall not take place since the rules associated which each profile differ from each other.</p>
+        <p>Defined gauging is a convention between the infrastructure manager and the railway undertaking or rolling stock manufacturer. </p>
+        <p>Who needs to know what?</p>
+        <ol>
+            <li>The infrastructure manager needs a reference profile to know where obstacles can be put .</li>
+            <li>Railway undertaking needs to know the reference profile to load vehicles and to safely run vehicles on their wheels. </li>
+            <li>The new rolling stock manufacturer needs to know the reference profile to which they construct and build new vehicles. </li>
+        </ol>
+        <p>Defined gauging calculation process ensures that vehicle with structure contact can never occur. The EN mandates that the kinematic gauging method is to be used for new and interoperable infrastructure.The infrastructure manager has also an option to create diffrent structure gauges that suit their specific needs. For that reason they apply rules for a Uniform Structure Gauge.</p>
+        <p>&#160;</p>
+        <p>Constriction can be classified into 4 groups</p>
+        <p>Group 1</p>
+        <p>Restrictions in the overall space (sideways and upwards)</p>
+        <p>•	Tunnel tubes</p>
+        <p>•	arched overpasses</p>
+        <p>•	Bridges with wind reinforcement at the top</p>
+        <p>•	Electrical overhead contact lines</p>
+        <p>Group 2</p>
+        <p>Width restrictions</p>
+        <p>•	Retaining walls,</p>
+        <p>•	bridge railing</p>
+        <p>•	Masts Signals</p>
+        <p>Group 3</p>
+        <p>Width and height restrictions</p>
+        <p>•	Overpasses</p>
+        <p>•	Platform roofs</p>
+        <p>Group 4</p>
+        <p>Height and width restrictions in the area of 0 to X mmm above the top of rail: Platform edges</p>
+        <p>•	Goods platforms</p>
+        <p>•	Track switches</p>
+        <p>•	Dwarf signals</p>
+        <p>•	Bridge reinforcements</p>
+        <p>•	etc.</p>
     </body>
 </html>
